[package]
name = "cache_bust_macro"
description = "Procedural macro for cache_bust"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition = "2021"

[lib]
proc-macro = true

[dependencies]
cache_bust_core.workspace = true
litrs = "0.4"
